# pingora-challenge

./: Cargo.toml
src/: main.rs
static/: altcha.min.js
templates/: challenge.html
