[package]
name = "pingora-challenge"
version = "0.1.0"
authors = ["Yaroslav Koval <news-d6140c@proxiedmail.com>"]
license = "Apache-2.0 or MIT"
edition = "2024"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = 'abort'
strip = true
debug = false

[dependencies]
pingora = { version = "0.6", features = ["proxy", "cache", "openssl", "lb"] }
async-trait = "0.1"
askama = "0.14.0"
once_cell = "1.21.3"
pingora-cache = "0.6.0"
http = "1.3.1"
hostname = "0.4.1"
hex = "0.4.3"
sha1 = "0.11.0-rc.2"
altcha-lib-rs = { version = "0.2.0", features = ["json"] }
serde_json = "1.0.143"
chrono = "0.4.41"
base64 = "0.22.1"
tokio = { version = "1.47.1", features = ["fs"] }
dashmap = "7.0.0-rc2"
